--- a/src/main/webapp/starter/main-footer.html
+++ b/src/main/webapp/starter/main-footer.html
@@ -1,6 +1,6 @@
 <!-- To the right -->
 <div class="pull-right hidden-xs">
-    <b>Version</b> 0.3.2
+    <b>Version</b> 1.0.0
 </div>
 <!-- Default to the left -->
-<strong>&copy; 携程支付中心</strong>
+<strong>易企秀自助分析平台</strong>
