--- a/src/main/webapp/starter/main-sidebar.html
+++ b/src/main/webapp/starter/main-sidebar.html
@@ -2,17 +2,17 @@
 <section class="sidebar">
 
     <!-- Sidebar user panel (optional) -->
-    <div class="user-panel">
-        <div class="pull-left image">
-            <img src="{{user.avatar}}" class="img-circle" alt="User Image">
-        </div>
-        <div class="pull-left info">
-            <p>{{user.username}}</p>
-        </div>
-    </div>
+    <!--<div class="user-panel">-->
+        <!--<div class="pull-left image">-->
+            <!--<img src="{{user.avatar}}" class="img-circle" alt="User Image">-->
+        <!--</div>-->
+        <!--<div class="pull-left info">-->
+            <!--<p>{{user.username}}</p>-->
+        <!--</div>-->
+    <!--</div>-->
     <!-- Sidebar Menu -->
     <ul class="sidebar-menu">
-        <li class="header">MENU</li>
+        <li class="header">菜单</li>
         <!-- DashBoard -->
         <li class="treeview" ui-sref-active="active">
             <a>
