更新主题、样式、布局；添加oracle驱动。

--- a/src/main/webapp/starter.html
+++ b/src/main/webapp/starter.html
@@ -28,7 +28,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           page. However, you can choose any other skin. Make sure you
           apply the skin class to the body tag so the changes take effect.
     -->
-    <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
+    <link rel="stylesheet" href="dist/css/skins/skin-blue-light.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,6 +37,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="plugins/jQuery/jquery-2.2.3.min.js"></script>
+    <script src="plugins/slimScroll/jquery.slimscroll.min.js"></script>
 
     <!--<script src="http://cdn.bootcss.com/angular.js/1.5.8/angular.js"></script>-->
     <script src="org/cboard/Settings.js"></script>
@@ -145,7 +146,7 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue-light fixed">
 <div class="wrapper">
 
     <!-- Main Header -->
@@ -286,5 +287,6 @@ desired effect
         </div>
     </div>
 </script>
+<script src="js/bg.js"></script>
 </body>
 </html>
