--- a/src/main/webapp/starter/main-header.html
+++ b/src/main/webapp/starter/main-header.html
@@ -3,7 +3,7 @@
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini"><b>TD</b></span>
     <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg"><b>ThinkData</b></span>
+    <span class="logo-lg"><img src="/css/logo.png" style="float:left;top: 0px;margin: 0px;padding: 0px;" width="80" height="50"><b>ThinkData</b></span>
 </a>
 
 <!-- Header Navbar -->
@@ -50,10 +50,10 @@
                     <!-- Menu Footer-->
                     <li class="user-footer">
                         <div class="pull-left">
-                            <div class="btn btn-default btn-flat" ng-click="changePwd()">修改密码</div>
+                            <div class="btn btn-link" ng-click="changePwd()">修改密码</div>
                         </div>
                         <div class="pull-right">
-                            <a href="j_spring_cas_security_logout" class="btn btn-default btn-flat">{{'HEADER.SIGN_OUT'|translate}}</a>
+                            <a href="j_spring_cas_security_logout" class="btn btn-link">{{'HEADER.SIGN_OUT'|translate}}</a>
                         </div>
                     </li>
                 </ul>
