扩展grid widget，明细表

--- a/src/main/webapp/render.html
+++ b/src/main/webapp/render.html
@@ -179,6 +179,7 @@
 <script src="org/cboard/service/chart/chartService.js"></script>
 <script src="org/cboard/service/chart/chartMapService.js"></script>
 <script src="org/cboard/service/chart/chartTableService.js"></script>
+<script src="org/cboard/service/chart/chartGridService.js"></script>
 <script src="org/cboard/service/chart/chartScatterService.js"></script>
 <script src="org/cboard/directive/dashboard/dashboardWidget.js"></script>
 
