--- a/src/main/webapp/starter.html
+++ b/src/main/webapp/starter.html
@@ -225,6 +225,7 @@ desired effect
 <script src="org/cboard/service/chart/chartService.js"></script>
 <script src="org/cboard/service/chart/chartMapService.js"></script>
 <script src="org/cboard/service/chart/chartTableService.js"></script>
+<script src="org/cboard/service/chart/chartGridService.js"></script>
 <script src="org/cboard/service/chart/chartScatterService.js"></script>
 <script src="org/cboard/directive/dashboard/dashboardWidget.js"></script>
 
